[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agtools"
authors = [{name = "Vijini Mallawaarachchi", email = "viji.mallawaarachchi@gmail.com"}]
keywords = ["metagenomics", "assembly", "graphs", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = ["click", "igraph"]

[project.urls]
Home = "https://agtools.readthedocs.io"

[project.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[project.scripts]
gbintk = "gbintk.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "black",
    "click",
    "flit",
    "isort==5.13.2",
]